[package]
name = "rugo"
description = "A command line tool that wraps the hugo command."
version = "0.1.2"
authors = ["shiomiyan <dev.umisk@gmail.com>"]
edition = "2018"
repository = "https://github.com/shiomiyan/hn"
license-file = "LICENSE"
readme = "README.md"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
git2 = "0.13"
